# opengel_practice

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: CMakeLists.txt  ch6.1_uniform_variable.cpp  ch6.2_more_attribute.cpp  ch6.3_shader_class.cpp  ch6.3ex2_moving_triangle.cpp  ch6.3ex3_fragement.sd  ch6.3ex3_poitionToFragement.cpp  ch6.3ex4_movingTriangle.cpp  ch7.1_texture.cpp  ch7.2_mix_texture.cpp  glad.c
src/ch10.1/: basic_camera.cpp  previous_code.cpp
src/ch10.2/: movableCamera.cpp  previous_code.cpp
src/ch10.3/: previous_code.cpp  walkAroundCamera.cpp
src/ch10.7/: mouseMove.cpp  previous_code.cpp
src/ch10.8/: zoom.cpp
src/ch10.9/: camera_class.cpp  fragment.sd  previous_code.cpp
src/ch12.1/: fragment.sd  lightSource.cpp  light_fragment.sd  previous_code.cpp
src/ch5/: create_draw_triangle.cpp
src/ch6.2/: more_attribute.cpp
src/ch6.3/: shader_class.cpp
src/ch6.3_ex2/: moving_triangle.cpp  vertex.sd
src/ch6.3_ex3/: poitionToFragement.cpp  vertex.sd
src/ch6.3_ex4/: movingTriangle.cpp
src/ch7.1/: texture.cpp
src/ch7.2/: fragment.sd  mix_texture.cpp
src/ch8.17/: glm.cpp
src/ch9.7/: coordinates.cpp
src/ch9.8/: cubic.cpp
src/ch9.8_2/: cubics.cpp  previous_code.cpp
src/common/: CMakeLists.txt  Camera.cpp  Camera.h  Texture2D.cpp  Texture2D.h  common.h  shader.cpp  shader.h
