macro(compile_executable arg1)
  add_executable(${arg1} glad.c ${arg1}.cpp)
  target_include_directories(${arg1} PUBLIC /usr/include)
  target_link_libraries(${arg1} PRIVATE glfw GL ${CMAKE_DL_LIBS})
endmacro()

compile_executable(ch5_create_draw_triangle)
compile_executable(ch6.1_uniform_variable)
compile_executable(ch6.2_more_attribute)
compile_executable(ch6.3_shader_class)
compile_executable(ch6.3ex2_moving_triangle)
compile_executable(ch6.3ex3_poitionToFragement)
compile_executable(ch6.3ex4_movingTriangle)
compile_executable(ch7.1_texture)
compile_executable(ch7.2_mix_texture)
