macro(compile_executable folederName filename)
  add_executable(${filename} glad.c ${folederName}/${filename}.cpp)
  target_include_directories(${filename} PUBLIC /usr/include ${folederName})
  target_link_libraries(${filename} PRIVATE glfw GL ${CMAKE_DL_LIBS})
endmacro()

compile_executable(ch5 create_draw_triangle)
compile_executable(ch6.1 uniform_variable)
compile_executable(ch6.2 more_attribute)
compile_executable(ch6.3 shader_class)
compile_executable(ch6.3_ex2 moving_triangle)
compile_executable(ch6.3_ex3 poitionToFragement)
compile_executable(ch6.3_ex4 movingTriangle)
compile_executable(ch7.1 texture)
compile_executable(ch7.2 mix_texture)
compile_executable(ch8.17 glm)
compile_executable(ch9.7 coordinates)
compile_executable(ch9.8 cubic)
compile_executable(ch9.8_2 cubics)
